2000-09-01  Bruno Haible  <haible@clisp.cons.org>

        * stream.d (lisp_completion): Put end_callback() at the right place,
          and protect malloc() and free() with begin/end_system_call().
          Fixes a crash in cstombs on i386 platforms, reported by
          Valeriy E. Ushakov <uwe@ptc.spbu.ru>.

2000-09-01  Bruno Haible  <haible@clisp.cons.org>

        * eval.d (interpret_bytecode_): Don't produce "testb %edx,%edx" or
          "testb %eax,%eax" any more.

2000-08-19  Bruno Haible  <haible@clisp.cons.org>

        * utils/ccpaux.c: main() returns int. Call fflush(stdout) before
          testing ferror(stdout).
        * utils/deema.c: Likewise.
        * utils/txt2c.c: Call fflush(stdout) before testing ferror(stdout).
        * utils/comment5.d: Call fflush(outfile) before testing
          ferror(outfile).

2000-08-26  Bruno Haible  <haible@clisp.cons.org>

        * autoconf/acgeneral.m4 (AC_OUTPUT): Use braces in exec_prefix default
          value, not parens.

2000-08-18  Bruno Haible  <haible@clisp.cons.org>

        * pathname.d (parse_logical_host_prefix): Renamed from logical_host.
          (string_logical_path_p): Remove function.
          (parse_namestring): Integrate it here. When recognizing a logical
          host, don't overwrite the :host argument.

        ANSI CL wants (PATHNAME (OPEN filename ...)) to return filename if
        filename is a logical pathname.
        * pathname.d (open_file): Expect the original filename on the stack.
          (OPEN): When the filename argument is a logical pathname, pass it
          to open_file.

2000-08-17  Sam Steingold  <sds@gnu.org>

	ANSI `parse-namestring' when LISP:*PARSE-NAMESTRING-ANSI* is non-NIL
	* pathname.d (logical_host): New function.
	(parse_logical_pathnamestring): Use it.
	(string_logical_path_p): New function.
	(parse_namestring): Use it.
	* constsym.d (parse_namestring_ansi): New variable.
	* spvw.d (init_symbol_values): Define it.
	* misc.d (set_ansi): Set it.